# mc-gui-cpp

src/: CMakeLists.txt  main.cpp
